# EmotionLens

./: .dockerignore  .env.example  .gitignore  README.md  auth.ts  docker-compose.prod.yml  docker-compose.yml  index.html  jest.config.ts  jest.setup.ts  next-auth.d.ts  next-env.d.ts  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
__tests__/: App.test.tsx  nextConfig.test.ts  packageScripts.test.ts  tailwindConfig.test.ts  tauri-setup.test.ts
__tests__/api/: analyzeFace.test.ts  analyzeVoice.test.ts  authMe.test.ts  sessionDetail.test.ts  sessionsLatest.test.ts  sessionsPost.test.ts  signup.test.ts
__tests__/app/: page.test.tsx
__tests__/constants/: emotions.test.ts
__tests__/db/: sessionSchemaMigration.test.ts
__tests__/docker/: Dockerfile.prod.test.ts  README.test.ts  compose.prod.test.ts  compose.test.ts  env.example.test.ts
__tests__/hooks/: useAudioCapture.test.ts  useEmotionAlerts.test.ts  useEmotionAnalysis.test.ts  useSessionStore.test.ts  useVideoCapture.test.ts
__tests__/layout/: RootLayout.test.tsx
__tests__/lib/: currentUser.test.ts  emotionEngine.test.ts  hume.test.ts  types.test.ts
__tests__/routing/: routing.test.tsx
app/: globals.css  layout.tsx  page.tsx
app/login/: page.tsx
app/report/: page.tsx
constants/: emotions.ts
docker/: Dockerfile.dev  Dockerfile.prod
hooks/: useAudioCapture.ts  useEmotionAlerts.ts  useEmotionAnalysis.ts  useMirrorApp.ts  useSessionPersistence.ts  useSessionStore.ts  useVideoCapture.ts
lib/: authUserRepository.ts  currentUser.ts  database.ts  emotionEngine.ts  hume.ts  postgres.ts  sessionRepository.ts  types.ts  window.ts
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  hume.rs  main.rs  window_monitor.rs
(+43 files in other folders)
