[package]
name = "emotion-lens"
version = "0.1.0"
description = "Real-time emotion detection from video conference participants"
authors = ["EmotionLens Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = [] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
active-win-pos-rs = "0.5"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]

[profile.release]
codegen-units = 1
lto = true
