[package]
name = "emotion-lens"
version = "0.2.0"
description = "Real-time emotion detection from video conference participants"
authors = ["EmotionLens Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = [] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"

[dev-dependencies]

[profile.release]
codegen-units = 1
lto = true
